Adding in required database files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.application.name=graphql-experiments
+spring.datasource.platform=h2
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=none
