adding in new queries for usage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.platform=h2
 spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto=none
 graphiql.enabled=true
+
+logging.level.org.hibernate.SQL=debug
